# game-notifier-server

./: .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/src/: handlers.rs  main.rs  req_models.rs  setup.rs
consumer/: Cargo.toml
consumer/src/: consumer.rs  filter.rs  main.rs
entity/: Cargo.toml
entity/src/: game.rs  lib.rs  subscriber.rs  subscriptions.rs
entity/src/dto/: game.rs  mod.rs
fetcher/: Cargo.toml
fetcher/src/: fetcher.rs  main.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240704_023328_create_table.rs
notifier/: Cargo.toml
notifier/src/: mailer.rs  main.rs  notifier.rs
service/: Cargo.toml
service/src/: dispatcher.rs  lib.rs
service/src/subscription/: subscription.rs
service/src/user/: user.rs
