[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.1"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["fs"] }

dotenvy = { workspace = true }
sea-orm = { workspace = true }
tokio = { workspace = true }
service = { workspace = true }

migration = { path = "../migration" }
serde = { version = "1.0.203", features = ["derive"] }
sha1 = "0.10.6"
hex = "0.4.3"
