[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
tikv-client = {workspace = true}
entity = {workspace = true}
dotenvy = {workspace = true}
async-nats = {workspace = true}
futures = {workspace = true}
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true}
tokio = {workspace = true}
uuid = { version = "1.9.1", features = ["v4"] }